<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.totoro_fly.justjava.MainActivity"
    >

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="3"
                android:hint="@string/activity_main_hint_请输入姓名"
                android:inputType="textCapWords"
                android:selectAllOnFocus="true"
                android:textSize="16sp"
                />

            <Button
                android:id="@+id/name_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nameClick"
                android:scaleY="0.8"
                android:text="@string/activity_main_button_确认"
                android:textAllCaps="true"
                android:textSize="16sp"
                />
        </LinearLayout>

        <TextView
            android:text="@string/activity_main_textview_配料"
            style="@style/TextView"/>
        />

        <CheckBox
            android:id="@+id/whipped_cream_check_box"
            android:text="@string/activity_main_checkbox_生牛奶"
            style="@style/CheckBox"/>

        <CheckBox
            android:id="@+id/chocolate_check_box"
            android:text="@string/activity_main_checkbox_巧克力"
            style="@style/CheckBox"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/activity_main_textview_数量"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_button"
                android:onClick="decermentButton"
                android:text="-"
                style="@style/Button.add"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:padding="8dp"
                android:text="0"
                android:textSize="16sp"
                style="@style/Button"/>

            <Button
                style="@style/Button.add"
                android:id="@+id/incerment_button"
                android:onClick="incermentButton"
                android:text="+"
                />
        </LinearLayout>

        <TextView
            android:paddingTop="16dp"
            android:text="@string/activity_main_textview_订单汇总"
            style="@style/TextView"/>


        <TextView
            android:id="@+id/order_summary_text_view"
            android:paddingTop="16dp"
            android:text="￥0"
            android:textSize="16sp"
            style="@style/Button"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/activity_main_button_提交订单"
                style="@style/Button"/>

            <Button
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:onClick="emailClick"
                android:text="@string/activity_main_button_邮件"
                style="@style/Button"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>